src/objects/Partner_Commission_Summary_History__c.object
<CustomObject>
    <description>Stores daily metrics against Partner Commissions to ease in reporting

For BAP-3698 - Partner Commissions v2</description>
    <fields>
        <fullName>Active_Partners_Closed__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The total number of active reseller partners for closed Partner Commission Summaries</inlineHelpText>
        <label>Active Partners - Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Partners_Open__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The total number of active reseller partners for open Partner Commission Summaries</inlineHelpText>
        <label>Active Partners - Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Partners__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <formula>Active_Partners_Closed__c +  Active_Partners_Open__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total number of active reseller partners for Partner Commission Summaries</inlineHelpText>
        <label>Active Partners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <formula>Commission_Earned__c  -  Payment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The net amount owed to partners</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Earned_Closed__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>Total commission earned for open Partner Commission Summaries</inlineHelpText>
        <label>Commission Earned - Closed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Earned_Open__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>Total commission earned for open Partner Commission Summaries</inlineHelpText>
        <label>Commission Earned - Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Earned__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <formula>Commission_Earned_Closed__c + Commission_Earned_Open__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total commission earned for open Partner Commission Summaries</inlineHelpText>
        <label>Commission Earned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commissionable_Revenue_Closed__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The total transaction value that can be used for calculating commissions in closed Partner Commission Summaries</inlineHelpText>
        <label>Commissionable Revenue - Closed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commissionable_Revenue_Open__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The total transaction value that can be used for calculating commissions in open Partner Commission Summaries</inlineHelpText>
        <label>Commissionable Revenue - Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commissionable_Revenue__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <formula>Commissionable_Revenue_Closed__c +  Commissionable_Revenue_Open__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total transaction value that can be used for calculating commissions in closed Partner Commission Summaries</inlineHelpText>
        <label>Commissionable Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commissionable_Transactions_Closed__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The total number of commissionable transactions for closed Partner Commission Summaries</inlineHelpText>
        <label>Commissionable Transactions - Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commissionable_Transactions_Open__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The total number of commissionable transactions for open Partner Commission Summaries</inlineHelpText>
        <label>Commissionable Transactions - Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commissionable_Transactions__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <formula>Commissionable_Transactions_Closed__c + Commissionable_Transactions_Open__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total number of commissionable transactions for Partner Commission Summaries</inlineHelpText>
        <label>Commissionable Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Earliest_Start_Date_Closed__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The earliest start date for closed Partner Commissions</inlineHelpText>
        <label>Earliest Start Date - Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earliest_Start_Date_Open__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The earliest start date for open Partner Commissions</inlineHelpText>
        <label>Earliest Start Date - Open</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earliest_Start_Date__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <formula>IF( OR(Earliest_Start_Date_Open__c &lt;  Earliest_Start_Date_Closed__c,  ISNULL(Earliest_Start_Date_Closed__c)), Earliest_Start_Date_Open__c, Earliest_Start_Date_Closed__c)</formula>
        <inlineHelpText>The earliest start date for Partner Commissions</inlineHelpText>
        <label>Earliest Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique key to ensure that only one record is created per day</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Latest_End_Date_Closed__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The latest end date for closed Partner Commission Summaries</inlineHelpText>
        <label>Latest End Date - Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_End_Date_Open__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The latest end date for open Partner Commission Summaries</inlineHelpText>
        <label>Latest End Date - Open</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_End_Date__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <formula>IF( OR(Latest_End_Date_Open__c &gt; Latest_End_Date_Closed__c, ISNULL(Latest_End_Date_Closed__c)), Latest_End_Date_Open__c, Latest_End_Date_Closed__c)</formula>
        <inlineHelpText>The latest end date for Partner Commission Summaries</inlineHelpText>
        <label>Latest End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partners_Paid__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The total number of partners that have been paid to date</inlineHelpText>
        <label>Partners Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The total amount paid out to partners</inlineHelpText>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payments__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The number of payments made to our partners</inlineHelpText>
        <label>Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary_Count_Closed__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The total number of closed Partner Commission Summary records</inlineHelpText>
        <label>Summary Count - Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary_Count_Open__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The total number of open Partner Commission Summary records</inlineHelpText>
        <label>Summary Count - Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary_Count__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <formula>Summary_Count_Closed__c + Summary_Count_Open__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total number of Partner Commission Summary records</inlineHelpText>
        <label>Summary Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Partner Commission Summary History</label>
    <nameField>
        <displayFormat>PCM-{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Partner Commission Summary History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Commission Summary Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>